cluster-service-hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-k8s
